test/input/invalid/assign_1.js
console.log(1 || 5--);
